src/snapshots/heave__tests__petstore@addPet_405.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/addPet_405.hurl
---
POST {{ baseurl }}/pet
Authorization: Bearer {{ authorization }}
Prefer: code=405
{
  "category": {
    "id": 0,
    "name": ""
  },
  "id": 0,
  "name": "",
  "photoUrls": [
    ""
  ],
  "status": "",
  "tags": [
    {
      "id": 0,
      "name": ""
    }
  ]
}
HTTP 405

