src/snapshots/heave__tests__petstore@deleteOrder_400.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/deleteOrder_400.hurl
---
DELETE {{ baseurl }}/store/order/{{orderId}}
Authorization: Bearer {{ authorization }}
Prefer: code=400

HTTP 400

