src/snapshots/heave__tests__petstore@deleteOrder_404.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/deleteOrder_404.hurl
---
DELETE {{ baseurl }}/store/order/{{orderId}}
Authorization: Bearer {{ authorization }}
Prefer: code=404

HTTP 404

