src/snapshots/heave__tests__petstore@deletePet_400.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/deletePet_400.hurl
---
DELETE {{ baseurl }}/pet/{{petId}}
Authorization: Bearer {{ authorization }}
Prefer: code=400
api_key:

HTTP 400

