src/snapshots/heave__tests__petstore@deleteUser_400.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/deleteUser_400.hurl
---
DELETE {{ baseurl }}/user/{{username}}
Authorization: Bearer {{ authorization }}
Prefer: code=400

HTTP 400

