src/snapshots/heave__tests__petstore@deleteUser_404.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/deleteUser_404.hurl
---
DELETE {{ baseurl }}/user/{{username}}
Authorization: Bearer {{ authorization }}
Prefer: code=404

HTTP 404

